--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,7 @@ Anagrams/bin/**
 Anagrams/obj/**
 BubbleSort/bin/**
 BubbleSort/obj/**
+IntegerReversal/obj/**
+IntegerReversal/bin/**
 StringReversal/obj/**
 StringReversal/bin/**
