--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,7 @@ BubbleSort/bin/**
 BubbleSort/obj/**
 IntegerReversal/obj/**
 IntegerReversal/bin/**
+Palindromes/obj/**
+Palindromes/bin/**
 StringReversal/obj/**
 StringReversal/bin/**
