--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,7 @@ IntegerReversal/obj/**
 IntegerReversal/bin/**
 Palindromes/obj/**
 Palindromes/bin/**
+SelectionSort/bin/**
+SelectionSort/obj/**
 StringReversal/obj/**
 StringReversal/bin/**
