--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ Anagrams/bin/**
 Anagrams/obj/**
 BubbleSort/bin/**
 BubbleSort/obj/**
+FizzBuzz/bin/**
+FizzBuzz/obj/**
 IntegerReversal/obj/**
 IntegerReversal/bin/**
 Palindromes/obj/**
