--- a/.gitignore
+++ b/.gitignore
@@ -18,5 +18,7 @@ Palindromes/obj/**
 Palindromes/bin/**
 SelectionSort/bin/**
 SelectionSort/obj/**
+SpiralMatrices/bin/**
+SpiralMatrices/obj/**
 StringReversal/obj/**
 StringReversal/bin/**
