--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ BubbleSort/bin/**
 BubbleSort/obj/**
 FibonacciSeries/bin/**
 FibonacciSeries/obj/**
+FindingVowels/bin/**
+FindingVowels/obj/**
 FizzBuzz/bin/**
 FizzBuzz/obj/**
 IntegerReversal/obj/**
