--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ MergeSort/bin/**
 MergeSort/obj/**
 Palindromes/obj/**
 Palindromes/bin/**
+PrintingPyramids/bin/**
+PrintingPyramids/obj/**
 PrintingSteps/bin/**
 PrintingSteps/obj/**
 SelectionSort/bin/**
