--- a/.gitignore
+++ b/.gitignore
@@ -30,5 +30,7 @@ SelectionSort/bin/**
 SelectionSort/obj/**
 SpiralMatrices/bin/**
 SpiralMatrices/obj/**
+Stacks/bin/**
+Stacks/obj/**
 StringReversal/obj/**
 StringReversal/bin/**
