--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,7 @@ SpiralMatrices/bin/**
 SpiralMatrices/obj/**
 Stacks/bin/**
 Stacks/obj/**
-StringReversal/obj/**
 StringReversal/bin/**
+StringReversal/obj/**
+Trees/bin/**
+Trees/obj/**
