--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ ArrayChunking/bin/**
 ArrayChunking/obj/**
 BubbleSort/bin/**
 BubbleSort/obj/**
+CircularLists/bin/**
+CircularLists/obj/**
 FibonacciSeries/bin/**
 FibonacciSeries/obj/**
 FindingVowels/bin/**
