--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ CircularLists/bin/**
 CircularLists/obj/**
 FibonacciSeries/bin/**
 FibonacciSeries/obj/**
+FindingMidpoint/bin/**
+FindingMidpoint/obj/**
 FindingVowels/bin/**
 FindingVowels/obj/**
 FizzBuzz/bin/**
