--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ Anagrams/bin/**
 Anagrams/obj/**
 ArrayChunking/bin/**
 ArrayChunking/obj/**
+BinarySearchTrees/bin/**
+BinarySearchTrees/obj/**
 BubbleSort/bin/**
 BubbleSort/obj/**
 CircularLists/bin/**
