--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,8 @@ SpiralMatrices/bin/**
 SpiralMatrices/obj/**
 Stacks/bin/**
 Stacks/obj/**
+StepBack/bin/**
+StepBack/obj/**
 StringReversal/bin/**
 StringReversal/obj/**
 Trees/bin/**
